JavaScript functions added

--- a/myschool-web-app/index.html
+++ b/myschool-web-app/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Welcome</h1>
-    <h3><i>Menu Items</h3>
+    <h3><i>Menu Items</i></h3>
     <hr />
     <a href="addNewCourse.html" target="_blank">Add new course</a>
     <br/>
