--- a/myschool-web-app/index.html
+++ b/myschool-web-app/index.html
@@ -2,17 +2,22 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>First HTML Example</title>
+	<meta charset="UTF-8">
+	<title>First HTML Example</title>
 </head>
 
 <body>
-    <h1>Welcome</h1>
-    <h3><i>Menu Items</i></h3>
-    <hr />
-    <a href="addNewCourse.html" target="_blank">Add new course</a>
-    <br/>
-    <a href="displayStudents.html" target="_blank">Display students enrolled a course</a>
+	<a href="index.html"><img src="images/ou_logo_eng.jpg"></a>
+	<h1>Welcome</h1>
+	<h3><i>Menu Items</i></h3>
+	<hr />
+	<a href="displayCourses.html" target="_blank">Display courses</a>
+
+	<br />
+	<a href="displayStudents.html" target="_blank">Display students enrolled a course</a>
+	<br />
+	<a href="addNewCourse.html" target="_blank">Add new course</a>
+
 </body>
 
 </html>
